--- a/package.json
+++ b/package.json
@@ -1,21 +1,34 @@
 {
   "name": "whatsapp-bot",
   "version": "1.0.0",
+  "description": "A WhatsApp bot for searching and downloading music using Baileys, YouTube API, and yt-dlp.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
     "build": "npm install yt-dlp",
+    "postinstall": "npm run build",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "keywords": ["whatsapp", "bot", "music", "baileys", "youtube", "yt-dlp"],
+  "author": "Your Name <your.email@example.com>",
+  "license": "MIT",
   "dependencies": {
     "@hapi/boom": "^10.0.1",
     "@whiskeysockets/baileys": "^6.7.9",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "yt-dlp": "^2023.09.24",
-    "youtube-dl-exec": "^2.0.0",
-  }
+    "youtube-dl-exec": "^2.0.0"
+  },
+  "engines": {
+    "node": ">=16.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kokocollab42134567/music.git"
+  },
+  "bugs": {
+    "url": "https://github.com/kokocollab42134567/music/issues"
+  },
+  "homepage": "https://github.com/kokocollab42134567/music#readme"
 }
